[gd_scene load_steps=31 format=3 uid="uid://bay8xtpr2ajbg"]

[ext_resource type="Script" uid="uid://bthi06cj6oya7" path="res://Scripts/Panels/shop.gd" id="1_p1fx8"]
[ext_resource type="Texture2D" uid="uid://d58udogmie07" path="res://ArtWork/Sprites/Extra/Items/item000.png" id="2_tqhce"]
[ext_resource type="Texture2D" uid="uid://ye4wqrxvyu53" path="res://ArtWork/Sprites/Extra/Items/item001.png" id="3_upfw8"]
[ext_resource type="Texture2D" uid="uid://g1rhk6egixem" path="res://ArtWork/Sprites/Extra/Items/item002.png" id="4_ie8rq"]
[ext_resource type="Texture2D" uid="uid://54lbdtvdvvuy" path="res://ArtWork/Sprites/Extra/Items/item003.png" id="5_sn7pq"]
[ext_resource type="Texture2D" uid="uid://dlekf8afca386" path="res://ArtWork/Sprites/Extra/Items/item004.png" id="6_oiuar"]
[ext_resource type="Texture2D" uid="uid://bqrstb3rvlo8r" path="res://ArtWork/Sprites/Extra/Items/item005.png" id="7_s6lip"]
[ext_resource type="Texture2D" uid="uid://1jayfl46wv0g" path="res://ArtWork/Sprites/Extra/Items/item006.png" id="8_nhqj6"]
[ext_resource type="Texture2D" uid="uid://c7jet2xy5mrre" path="res://ArtWork/Sprites/Extra/Items/item007.png" id="9_nwawy"]
[ext_resource type="Texture2D" uid="uid://c2vptb5okea1r" path="res://ArtWork/Sprites/Extra/Items/item008.png" id="10_vt60u"]
[ext_resource type="Texture2D" uid="uid://dd551ep532ob5" path="res://ArtWork/Sprites/Extra/Items/item009.png" id="11_hmcil"]
[ext_resource type="Texture2D" uid="uid://5xheabunlag6" path="res://ArtWork/Sprites/Extra/Items/item010.png" id="12_4sybk"]
[ext_resource type="Texture2D" uid="uid://co5duta3m6geg" path="res://ArtWork/Sprites/Extra/Items/item011.png" id="13_csb1m"]
[ext_resource type="Texture2D" uid="uid://dsqnw7kl6qayk" path="res://ArtWork/Sprites/Extra/Items/item012.png" id="14_o6j0m"]
[ext_resource type="Texture2D" uid="uid://c5drg6ta6sh4h" path="res://ArtWork/Sprites/Extra/Items/item013.png" id="15_cya78"]
[ext_resource type="Texture2D" uid="uid://vhssv4w8r05" path="res://ArtWork/Sprites/Extra/Items/item014.png" id="16_c65vc"]
[ext_resource type="Texture2D" uid="uid://cst3d4iy1v8ko" path="res://ArtWork/Sprites/Extra/Items/item015.png" id="17_ktnhl"]
[ext_resource type="Texture2D" uid="uid://bfu7hxxcc2wv6" path="res://ArtWork/Sprites/Extra/Items/item016.png" id="18_tvmjo"]
[ext_resource type="Texture2D" uid="uid://c4idgywxvwrp" path="res://ArtWork/Sprites/Extra/Items/item017.png" id="19_tm1rq"]
[ext_resource type="Texture2D" uid="uid://d2gc2vwb0khkb" path="res://ArtWork/Sprites/Extra/Items/item018.png" id="20_lsw77"]
[ext_resource type="Texture2D" uid="uid://b42irwha3lpch" path="res://ArtWork/Sprites/Extra/Items/item019.png" id="21_nof0j"]
[ext_resource type="Texture2D" uid="uid://cplm304r422li" path="res://ArtWork/Sprites/Extra/IconeLoja.png" id="22_dsxwc"]
[ext_resource type="Texture2D" uid="uid://ci4g8n2tudt2n" path="res://ArtWork/Sprites/Extra/IconeInimigo.png" id="23_is77m"]
[ext_resource type="Texture2D" uid="uid://cokj6vtg6dyta" path="res://ArtWork/Sprites/Extra/srrato-sheet.png" id="24_5ji7e"]
[ext_resource type="Theme" uid="uid://eoki2u64xs1f" path="res://ArtWork/Resources/Tema.tres" id="25_mvrds"]
[ext_resource type="StyleBox" uid="uid://b0w4tv06d6ytp" path="res://ArtWork/Resources/new_style_box_flat.tres" id="26_pbj8j"]
[ext_resource type="Texture2D" uid="uid://bb370esu6imjr" path="res://ArtWork/Sprites/Extra/Arrows_Roundabout_Rotation_Circle_Reload_Refresh_Loop.png" id="27_vky47"]

[sub_resource type="Animation" id="Animation_oic0x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Srrato-sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mk4b3"]
resource_name = "idle"
length = 6.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Srrato-sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.6, 2.73333, 2.9, 3.06667, 3.2, 3.36667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oic0x"]
_data = {
&"RESET": SubResource("Animation_oic0x"),
&"idle": SubResource("Animation_mk4b3")
}

[node name="Shop" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 454.0
offset_right = 910.0
offset_bottom = 770.0
script = ExtResource("1_p1fx8")
items = Array[Texture2D]([ExtResource("2_tqhce"), ExtResource("3_upfw8"), ExtResource("4_ie8rq"), ExtResource("5_sn7pq"), ExtResource("6_oiuar"), ExtResource("7_s6lip"), ExtResource("8_nhqj6"), ExtResource("9_nwawy"), ExtResource("10_vt60u"), ExtResource("11_hmcil"), ExtResource("12_4sybk"), ExtResource("13_csb1m"), ExtResource("14_o6j0m"), ExtResource("15_cya78"), ExtResource("16_c65vc"), ExtResource("17_ktnhl"), ExtResource("18_tvmjo"), ExtResource("19_tm1rq"), ExtResource("20_lsw77"), ExtResource("21_nof0j")])
shop_icon = ExtResource("22_dsxwc")
fight_icon = ExtResource("23_is77m")

[node name="Srrato-sheet" type="Sprite2D" parent="."]
position = Vector2(228, 385.215)
scale = Vector2(7.00111, 7.00111)
texture = ExtResource("24_5ji7e")
hframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="Srrato-sheet"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_oic0x")
}
autoplay = "idle"

[node name="Srrato-sheet2" type="Sprite2D" parent="."]
position = Vector2(228, 662)
scale = Vector2(7, 7)
texture = ExtResource("24_5ji7e")
region_enabled = true
region_rect = Rect2(0, 79.0267, 65.0216, 30.9733)

[node name="Item1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 570.0
offset_right = 152.0
offset_bottom = 669.0
texture = ExtResource("21_nof0j")
stretch_mode = 6

[node name="Item2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 178.0
offset_top = 622.0
offset_right = 278.0
offset_bottom = 721.0
texture = ExtResource("18_tvmjo")
stretch_mode = 6

[node name="Item3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 304.0
offset_top = 570.0
offset_right = 404.0
offset_bottom = 669.0
texture = ExtResource("16_c65vc")
stretch_mode = 6

[node name="Reload" type="Button" parent="."]
layout_mode = 0
offset_left = 381.0
offset_top = 698.0
offset_right = 444.0
offset_bottom = 761.0
theme = ExtResource("25_mvrds")
theme_override_styles/normal = ExtResource("26_pbj8j")
icon = ExtResource("27_vky47")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="button_down" from="Reload" to="." method="_on_reload_button_down"]
